--- a/source/css/style.css
+++ b/source/css/style.css
@@ -29,6 +29,148 @@ p{
 	display: none;
 }
 
+/* Tradução 
+--------------------------------*/
+
+#google_translate_element, .goog-te-banner-frame, .goog-te-balloon-frame, #goog-gt-tt, .goog-te-balloon-frame, .goog-tooltip, .goog-tooltip:hover {
+    display:none !important;
+}
+
+/* Horizonta Menu CSSS 
+--------------------------------*/
+
+/*
+=====
+DEPENDENCES
+=====
+*/
+
+.r-link {
+	display: var(--rLinkDisplay, inline-flex) !important;
+  }
+  
+  .r-link[href] {
+	color: var(--rLinkColor) !important;
+	text-decoration: var(--rLinkTextDecoration, none) !important;
+  }
+  
+  .r-list {
+	padding-left: var(--rListPaddingLeft, 0) !important;
+	margin-top: var(--rListMarginTop, 0) !important;
+	margin-bottom: var(--rListMarginBottom, 0) !important;
+	list-style: var(--rListListStyle, none) !important;
+  }
+  
+  /*
+  =====
+  CORE STYLES
+  =====
+  */
+  
+  .menu {
+	--rLinkColor: var(--menuLinkColor, currentColor);
+  }
+  
+  .menu__link {
+	display: var(--menuLinkDisplay, block);
+  }
+  
+  /* 
+  focus state 
+  */
+  
+  .menu__link:focus {
+	outline: var(--menuLinkOutlineWidth, 2px) solid
+	  var(--menuLinkOutlineColor, currentColor);
+	outline-offset: var(--menuLinkOutlineOffset);
+  }
+  
+  /* 
+  fading siblings
+  */
+  
+  .menu:hover .menu__link:not(:hover) {
+	--rLinkColor: var(--menuLinkColorUnactive, rgba(22, 22, 22, 0.35));
+  }
+  
+  /*
+  =====
+  PRESENTATION STYLES
+  =====
+  */
+  
+  .menu {
+	margin-top: 0;
+	background-color: var(--menuBackgroundColor, #f0f0f0);
+	box-shadow: var(
+	  --menuBoxShadow,
+	  0 1px 3px 0 rgba(0, 0, 0, 0.12),
+	  0 1px 2px 0 rgba(0, 0, 0, 0.24)
+	);
+  }
+  
+  .menu__list {
+	display: flex;
+	margin-left: 20%;
+	margin-right: 20%;
+  }
+  
+  .menu__link {
+	padding: var(--menuLinkPadding, 1.5rem 2.5rem);
+	font-weight: 700;
+	text-transform: uppercase;
+  }
+
+  .menu__link2 {
+	padding: var(--menuLinkPadding, 1rem 1rem);
+	font-weight: 700;
+	text-transform: uppercase;
+  }
+  
+  /* 
+  =====
+  TEXT UNDERLINED
+  =====
+  */
+  
+  .text-underlined {
+	position: relative;
+	overflow: hidden;
+  
+	will-change: color;
+	transition: color 0.25s ease-out;
+  }
+  
+  .text-underlined::before,
+  .text-underlined::after {
+	content: "";
+	width: 0;
+	height: 3px;
+	background-color: var(--textUnderlinedLineColor, currentColor);
+  
+	will-change: width;
+	transition: width 0.1s ease-out;
+  
+	position: absolute;
+	bottom: 0;
+  }
+  
+  .text-underlined::before {
+	left: 50%;
+	transform: translateX(-50%);
+  }
+  
+  .text-underlined::after {
+	right: 50%;
+	transform: translateX(50%);
+  }
+  
+  .text-underlined:hover::before,
+  .text-underlined:hover::after {
+	width: 100%;
+	transition-duration: 0.2s;
+  }
+
 /* Efeito Parallax
 -------------------------------*/
 
