--- a/source/css/style.css
+++ b/source/css/style.css
@@ -10,6 +10,10 @@ html {
 	height: 100%;
 }
 
+.linha {
+    height: 10px;
+}
+
 .conteudo {
 	color: #777;
 	background-color: white;
@@ -168,10 +172,15 @@ nav ul {
 }
 
 footer {
-	bottom: 0;
+	/*bottom: 0;
 	background-color: #fff;
-	color: #000;
 	width: 100%;
-	text-align: center;
+	text-align: center;*/
 	text-shadow: #000 0.1em 0.1em 0.2em;
+	text-align: center;
+    font-weight: bold;
+    padding: 5px 50px;
+	color: #fff;
+	-webkit-text-stroke-width: 0.25px;
+    -webkit-text-stroke-color: #000
 }
