--- a/source/css/style.css
+++ b/source/css/style.css
@@ -178,7 +178,78 @@ ul a.horz:hover {
 ###############################
 */
 
-
+.container {
+	position: fixed;
+	bottom: 1em;
+	right: 1em;
+  }
+  
+  .menu-toggle {
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	background-color: #1ef0a0;
+	box-shadow: 4px 4px 2px 1px rgba(0, 0, 0, 0.2);
+	position: absolute;
+	z-index: 5;
+	bottom: 0;
+	right: 0;
+	display: table;
+	text-align: center;
+  }
+  .menu-toggle .fa {
+	color: #fff;
+	font-size: 2em;
+	display: table-cell;
+	vertical-align: middle;
+	transition: 0.4s;
+  }
+  .menu-toggle.open .fa {
+	transform: rotate(135deg);
+  }
+  
+  .btn-app {
+	width: 2.5em;
+	height: 2.5em;
+	border-radius: 50%;
+	position: absolute;
+	background-color: #4644fd;
+	color: #fff;
+	text-align: center;
+  }
+  .btn-app .fa {
+	line-height: 2.5em;
+  }
+  
+  .open .btn-app {
+	box-shadow: 4px 4px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+  
+  .menu-round {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	z-index: 3;
+  }
+  .menu-round .btn-app {
+	bottom: 0.25em;
+	right: 0.25em;
+	transition: 0.4s;
+  }
+  .menu-round.open .btn-app:nth-of-type(1) {
+	right: 0.5em;
+	bottom: 4.25em;
+	transition-delay: 0.2s;
+  }
+  .menu-round.open .btn-app:nth-of-type(2) {
+	right: 3.5em;
+	bottom: 3.5em;
+	transition-delay: 0.1s;
+  }
+  .menu-round.open .btn-app:nth-of-type(3) {
+	right: 4.25em;
+	bottom: 0.5em;
+  }
 
 /*
 #################################
