--- a/source/css/style.css
+++ b/source/css/style.css
@@ -104,15 +104,15 @@ label.label::first-letter {
     width: 100%;
 }
 
-#radio1:checked ~ .first, #radio4:checked ~ .first, #radio7:checked ~ .first {
+#radio1:checked ~ .first, #radio4:checked ~ .first, #radio7:checked ~ .first, #radio10:checked ~ .first, #radio13:checked ~ .first {
     margin-left: 0;
 }
 
-#radio2:checked ~ .first, #radio5:checked ~ .first, #radio8:checked ~ .first {
+#radio2:checked ~ .first, #radio5:checked ~ .first, #radio8:checked ~ .first, #radio11:checked ~ .first, #radio14:checked ~ .first {
     margin-left: -25%;
 }
 
-#radio3:checked ~ .first, #radio6:checked ~ .first, #radio9:checked ~ .first {
+#radio3:checked ~ .first, #radio6:checked ~ .first, #radio9:checked ~ .first, #radio12:checked ~ .first, #radio15:checked ~ .first {
     margin-left: -50%;
 }
 
