--- a/source/css/style.css
+++ b/source/css/style.css
@@ -381,8 +381,8 @@ footer {
     font-weight: bold;
     padding: 5px 50px;
 	color: #fff;
-	-webkit-text-stroke-width: 0.25px;
-    -webkit-text-stroke-color: #000
+	/* -webkit-text-stroke-width: 0.25px;
+    -webkit-text-stroke-color: #000 */
 }
 
 /*
